Apply OpenRewrite Java 17 migration.